--- a/FileParser/FileParser.csproj
+++ b/FileParser/FileParser.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileWatcher.cs" />
     <Compile Include="MenuHelper.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
